--- a/monitor_station.html
+++ b/monitor_station.html
@@ -12,7 +12,6 @@
       <div class="section column">
         <div class="text">
           <h2>Final Design Sketch</h2>
-          <!-- Paste your final design sketch here -->
           <div class="image-grid">
             <div class="image-item">
               <img src="images/final_main.jpeg" alt="Final Design Sketch - Main View">
@@ -31,8 +30,16 @@
 
         <div class="text">
           <h2>Process Flowchart</h2>
-          <!-- Paste your flowchart here -->
-          <img src="images/placeholder_flowchart.png" alt="Process Flowchart" style="width: 100%; max-width: 600px; border: 1px solid #ccc;">
+          <div class="image-grid">
+            <div class="image-item">
+              <img src="images/flowone.png" alt="Process Flowchart 1">
+              <p class="image-caption">Flowchart 1</p>
+            </div>
+            <div class="image-item">
+              <img src="images/flowtwo.png" alt="Process Flowchart 2">
+              <p class="image-caption">Flowchart 2</p>
+            </div>
+          </div>
         </div>
 
         <div class="text">
