--- a/circuits.html
+++ b/circuits.html
@@ -63,13 +63,17 @@
             </p>
           </div>
           <div class="text">
-            <h2>Top</h2>
-            <img class="circuit" src="images/arduino1.jpg" alt="">
-          </div>
-
-          <div class="text">
-            <h2>Bottom</h2>
-            <img class="circuit" src="images/arduino2.jpg" alt="">
+            <h2>Arduino Module Views</h2>
+            <div class="image-grid">
+                <div class="image-item">
+                    <img src="images/arduino1.jpg" alt="Top View">
+                    <p class="image-caption">Top View</p>
+                </div>
+                <div class="image-item">
+                    <img src="images/arduino2.jpg" alt="Bottom View">
+                    <p class="image-caption">Bottom View</p>
+                </div>
+            </div>
           </div>
       </div>
 
