--- a/parts.html
+++ b/parts.html
@@ -10,19 +10,25 @@
 </head>
 <body>
     <main>
-        <h1>Electrical Components</h1>
-        <div class="section column">
-            <div class="text">
-                <img src="images/parts1.png" alt="" class="parts">
-            </div> 
-            <div class="text">
-              <img src="images/parts2.png" alt="" class="parts">
-            </div>
-            <div class="text">
-              <img src="images/parts3.png" alt="" class="parts">
-            </div>
-            <div class="text">
-              <img src="images/parts4.png" alt="" class="parts">
+        <div class="text">
+            <h2>Electrical Components</h2>
+            <div class="image-grid">
+                <div class="image-item">
+                    <img src="images/parts1.png" alt="Component 1">
+                    <p class="image-caption">Component 1</p>
+                </div>
+                <div class="image-item">
+                    <img src="images/parts2.png" alt="Component 2">
+                    <p class="image-caption">Component 2</p>
+                </div>
+                <div class="image-item">
+                    <img src="images/parts3.png" alt="Component 3">
+                    <p class="image-caption">Component 3</p>
+                </div>
+                <div class="image-item">
+                    <img src="images/parts4.png" alt="Component 4">
+                    <p class="image-caption">Component 4</p>
+                </div>
             </div>
         </div>
     </main>
