--- a/robot_assembly.html
+++ b/robot_assembly.html
@@ -11,17 +11,29 @@
 <body>
     <main>
         <h1>Robot Assembly</h1>
-        <div class="section column">
-            <div class="text">
-                <img src="images/chassis.png" alt="" class="parts">
-            </div> 
-            <div class="text">
-                <img src="images/electrical.png" alt="" class="parts">
-                <img src="images/electrical2.png" alt="" class="parts">
-            </div> 
-            <div class="text">
-              <img src="images/full.png" alt="" class="parts">
-              <img src="images/full2.png" alt="" class="parts">
+        <div class="text">
+            <h2>Robot Assembly Views</h2>
+            <div class="image-grid">
+                <div class="image-item">
+                    <img src="images/chassis.png" alt="Chassis Assembly">
+                    <p class="image-caption">Chassis Assembly</p>
+                </div>
+                <div class="image-item">
+                    <img src="images/electrical.png" alt="Electrical Assembly 1">
+                    <p class="image-caption">Electrical Assembly 1</p>
+                </div>
+                <div class="image-item">
+                    <img src="images/electrical2.png" alt="Electrical Assembly 2">
+                    <p class="image-caption">Electrical Assembly 2</p>
+                </div>
+                <div class="image-item">
+                    <img src="images/full.png" alt="Full Assembly 1">
+                    <p class="image-caption">Full Assembly 1</p>
+                </div>
+                <div class="image-item">
+                    <img src="images/full2.png" alt="Full Assembly 2">
+                    <p class="image-caption">Full Assembly 2</p>
+                </div>
             </div>
         </div>
         <div class="section">
