--- a/monitor_station.html
+++ b/monitor_station.html
@@ -817,8 +817,7 @@ void turnLeft() {
         <div class="text">
           <h2>Contributions to Your Team</h2>
           <p>
-            <!-- Describe your main contributions -->
-            [Placeholder: In 2-3 sentences describe your main contributions to your team throughout this project]
+            I was the sole electrical designer and programmer on our team. I was in charge of the electronics and programming for the rover, the monitor station, and any attachments. I also helped with the design and assembly of the rover and monitor station, but those were shared tasks between Kevin and I.
           </p>
         </div>
       </div>
